@@ -1,10 +1,19 @@
 
 --- current version
+improvements:
+
 new arguments "smin", "smax" and "samplesize" to "stretch"; and bug fixes. See https://github.com/rspatial/raster/issues/70
 
 new method "median" for Raster objects
 
-bug fixes in raster::predict for use with factor data.
+layer names in GTiff files are now read from file. Requested by Kyle Taylor
+https://github.com/rspatial/raster/issues/88
+
+bug fixes:
+
+parellel version of extract with polygons and "fun" messed up the order of the values (reported by Jacory). https://github.com/rspatial/raster/issues/79
+
+raster::predict bug when using factors (reported by vvirkki). https://github.com/rspatial/raster/issues/73
 
 
 --- 24-September-2019, version 3.0-7
